# machlearn

./: Cargo.toml  mnist_convtwolayer_weights.json  mnist_singlelayer_weights.json  mnist_tmp_weights.json
src/: datasets.rs  lib.rs  main.rs  matrix.rs  mnistdigits.rs  neuralnetwork.rs  neuralnetwork2.rs  vector.rs
src/datasets/: convolutiontest.rs  imagedatasets.rs  mnistdigits.rs
src/matrix/: arit.rs  sliceview.rs  tests.rs  transposedview.rs  vectorview.rs
src/neuralnetwork/: activation_function.rs  convolutional.rs  dense.rs  fullyconnected.rs  pool.rs  tests.rs
src/vector/: arit.rs  tests.rs
tests/: matrixtest.rs
