[package]
name = "machlearn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.1"
rand = "0.8.3"
rand_seeder = "0.2.3"
rand_pcg = "0.3.1"
rayon = "1.5.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
typetag = "0.1.8"
